--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             White: <span class="badge">{{whiteCounter}}</span>
             <div class="board">
                 <div class="board-row" ng-repeat="row in board">
-                    <div class="border-field-container" ng-repeat="field in row">
+                    <div class="board-field-container" ng-repeat="field in row">
                         <div class="board-field" ng-class="{'white':field.type === 0, 'black':field.type === 1}" ng-click="boardClick($parent.$index, $index)">
                             <div class="board-field-layel-white"></div>
                             <div class="board-field-layel-black"></div>
